# iron-oak-insurance

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt  verify_phase1.py
.github/agents/: ai_ml_architect.agent.md
ai/api/handlers/: main.py
ai/api/routers/: models_router.py  rag_router.py
ai/models/: fairness_audit.py
ai/models/churn_prediction/: model.py
ai/models/fraud_detection/: annual_loss_waterfall.py  fraud_pie_chart.py  model.py  waterfall_params.py
ai/models/risk_scoring/: extract_feature_payload.py  model.py  shap_stage1.npy  shap_stage2.npy
ai/pipelines/embedding/: chunk_claim_letter.py  chunk_declaration.py  chunk_faq.py  chunk_renewal.py  chunk_router.py  embed_and_load.py
ai/pipelines/ingestion/: feature_engineer.py
ai/pipelines/rag/: rag_pipeline.py  retrieval_router.py
ai/utils/: log.py
data-gen/config/: coverage_rules.json  states.json
data-gen/generators/: claim_gen.py  customer_gen.py  document_gen.py  faq_gen.py  policy_gen.py  run_all.py  telematics_gen.py  validate.py  verify_all.py  verify_claims.py  verify_customers.py  verify_documents.py  verify_policies.py  verify_telematics.py
data-gen/schemas/: claim.schema.json  customer.schema.json  faq.schema.json  policy.schema.json  telematics.schema.json
data_gen/config/: coverage_rules.json  states.json
data_gen/generators/: claim_gen.py  customer_gen.py  document_gen.py  faq_gen.py  iso_gen.py  policy_gen.py  run_all.py  telematics_gen.py  verify_all.py  verify_claims.py  verify_customers.py  verify_documents.py  verify_lateReport.py  verify_policies.py  verify_rag.py  verify_telematics.py  verify_violations.py  violation_gen.py
data_gen/schemas/: claim.schema.json  customer.schema.json  faq.schema.json  iso_claim_history.schema.json  policy.schema.json  telematics.schema.json  violation.schema.json
db/: load_json.py  schema.sql  verify_iso.py
doc/: CROSS_PHASE.md  Change_log.md  Cheat_sheet.md  IMPLEMENTATION_PLAN.md  Improvemnts_notes.md  Instructions.md  PHASE_1_DATA_GEN.md  PHASE_2_DATABASE.md  PHASE_3_ML.md  PHASE_4_RAG.md  PHASE_5_BEDROCK.md  Presentation_summary.md  Risk_Scoring_Architecture.md  Risk_scoring_model.md  Skill-AI-Expert.md  Strategy_ROI.md  Troubleshooting.md  iron_oak_insurance_strategy.md
