[project]
name = "iron-oak-insurance"
version = "0.1.0"
description = "AIOI AI Strategy & Data Platform"
requires-python = ">=3.11"
dependencies = [
    # Phase 1 — Data Generation
    "faker>=20.0",
    "python-dateutil>=2.8.2",
    "reportlab>=4.0",
    "Pillow>=10.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]