[project]
name = "iron-oak-insurance"
version = "0.1.0"
description = "AIOI AI Strategy & Data Platform"
requires-python = ">=3.11"
dependencies = [
    # Phase 1 — Data Generation
    "faker>=20.0",
    "python-dateutil>=2.8.2",
    "reportlab>=4.0",
    "Pillow>=10.0",
    "tqdm>=4.66",
    "dotenv>=0.9.9",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.49",
    "numpy>=2.4.4",
    "xgboost>=3.2.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
