[project]
name = "iron-oak-insurance"
version = "0.1.0"
description = "AIOI AI Strategy & Data Platform"
requires-python = ">=3.11"
dependencies = [
    # Phase 1 — Data Generation
    "faker>=20.0",
    "python-dateutil>=2.8.2",
    "reportlab>=4.0",
    "pillow>=10.0",
    "tqdm>=4.66",
    "dotenv>=0.9.9",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.49",
    "numpy>=2.4.4",
    "xgboost>=3.2.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "jsonschema>=4.26.0",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.4",
    "python-dotenv>=1.2.2",
    "fastapi[standard]>=0.135.3",
    "uvicorn>=0.44.0",
    "mangum>=0.21.0",
    "fitz>=0.0.1.dev2",
    "sentence-transformers>=5.4.1",
    "pgvector>=0.3.6",
    "pymupdf>=1.27.2.2",
    "langchain-community>=0.4.1",
    "langchain-postgres>=0.0.17",
    "tiktoken>=0.12.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
